<resources>
    <string name="app_name">Jeopardy Game</string>
    <string name="highscore">High Score</string>
    <string name="points_200">200</string>
    <string name="points_400">400</string>
    <string name="points_600">600</string>
    <string name="points_800">800</string>
    <string name="points_1000">1000</string>
    <string name="points_1200">1200</string>
    <string name="points_1600">1600</string>
    <string name="points_2000">2000</string>
    <string name="scores">Score</string>
    <string name="settings">Settings</string>
    <string name="score">Score:</string>
    <string name="email">Email</string>
    <string name="password">PassWord</string>
    <string name="register">Are you new? Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to Jeopardy game, create an Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_registration">Email</string>
    <string name="password_registration">Password</string>
    <string name="enter_password">Re-enter Password</string>
    <string name="register_">register</string>
    <string name="login_">Have you an account? Log in</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="logout">Log Out</string>

    <string name="back_to_first_round">Back To First Round</string>
    <string name="double_jeopardy">Double Jeopardy</string>
    <string name="final_jeopardy">Final jeopardy</string>

    <string name="new_game">New Game</string>
    <string name="daily_double">Daily Double</string>

    <string name="did_you_answer_correct">Did you answer correctly?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="daily_double_wager_correct_or_not">Enter Daily Double Wager And If It Was Correct Or Not</string>
    <string name="wager">Wager:</string>

    <string name="enter_final_jeopardy_wager">Enter final jeopardy wager below</string>
    <string name="click_button_to_start_timer">Click this button to start the final jeopardy timer</string>
    <string name="start_final_jeopardy_timer">Start Final Jeopardy Timer</string>

    <string name="finish_game">Finish Game</string>

    <string name="wager_too_high">Please enter a daily double wager that is equal to, or less than your current score</string>
    <string name="wager_greater_than_maximum_amount_allowed">Please enter a wager that is equal to, or less than: </string>
    <string name="wager_not_positive">Wager must be a positive number</string>
    <string name="please_enter_a_wager">Please enter a wager</string>
    <string name="minimum_wager">Please enter a wager greater than the minimum amount: 5</string>

    <string name="final_jeopardy_timer_started">Final jeopardy timer started!</string>
    <string name="ten_sec_left_final_jeopardy">10 seconds remaining to answer the final jeopardy clue!</string>
    <string name="final_jeopardy_time_is_up">Final jeopardy time is up! Did you come up with the correct answer?</string>
    <string name="wager_must_be_equal_to_or_less_than_score">Final Jeopardy wager must be equal to or less than the current score</string>
    <string name="high_score_title">High Scores</string>
    <string name="reset_all_scores">Reset All Scores</string>
    <string name="no_scores">No Scores Available</string>

    <string name="current_user">Current User:</string>

    <string name="first_round_title">First Round</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- string resources for the open and close toggle nav menu drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="dark_theme">Dark Theme</string>
    <string name="stay_loggedIn">Stay Logged In</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>