<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PointsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonPoints1"
            style="@style/PointsButtons"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:shadowColor="#FFFFFF"
            android:text="@string/points_200" />

        <Button
            android:id="@+id/buttonPoints2"
            style="@style/PointsButtons"
            android:layout_height="wrap_content"
            android:text="@string/points_400" />

        <Button
            android:id="@+id/buttonPoints3"
            style="@style/PointsButtons"
            android:layout_height="wrap_content"
            android:text="@string/points_600" />

        <Button
            android:id="@+id/buttonPoints4"
            style="@style/PointsButtons"
            android:layout_height="wrap_content"
            android:text="@string/points_800" />

        <Button
            android:id="@+id/buttonPoints5"
            style="@style/PointsButtons"
            android:layout_height="wrap_content"
            android:text="@string/points_1000" />
    </LinearLayout>

</FrameLayout>