<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".register">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="510dp"
        android:text="@string/welcome"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="317dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="188dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="23dp"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/edLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="23dp"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/edEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="23dp"
            android:text="@string/email_registration" />

        <EditText
            android:id="@+id/edPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="23dp"
            android:text="@string/password_registration" />

        <EditText
            android:id="@+id/edReEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="23dp"
            android:text="@string/enter_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="20dp"
            android:text="@string/login_"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>