<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".UserRegister">


    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="333dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="288dp"
            android:layout_height="92dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/welcome"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edUserName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingTop="5dp" />

        <EditText
            android:id="@+id/edPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_registration"
            android:inputType="textPersonName"
            android:paddingTop="5dp" />

        <EditText
            android:id="@+id/edReEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPersonName"
            android:paddingTop="5dp" />


        <Button
            android:id="@+id/btnRegister"
            style="@style/ButtonWith3DText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bordeau"
            android:text="@string/register_"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="10dp"
            android:text="@string/login_"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>