<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalJeopardyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFinalJeopardyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/final_jeopardy"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEnterWagerInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_final_jeopardy_wager"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewFinalJeopardyWagerLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/wager"
                        android:textAlignment="viewStart"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editTextFinalJeopardyWager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="#FFFFFF"
                        android:inputType="number"
                        android:text="0"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewStartTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/click_button_to_start_timer"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonStartFinalJeopardyTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_final_jeopardy_timer" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewWasAnswerCorrect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/did_you_answer_correct"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/green"
                        android:text="@string/yes" />

                    <Button
                        android:id="@+id/buttonNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/red"
                        android:text="@string/no" />
                </LinearLayout>

            </LinearLayout>

            <fragment
                android:id="@+id/fragment9"
                android:name="ca.on.conestogac.jeopardygameapplication.ScoreFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_score" />

            <fragment
                android:id="@+id/fragment10"
                android:name="ca.on.conestogac.jeopardygameapplication.RoundButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_round_buttons" />

            <Button
                android:id="@+id/buttonFinishGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish_game" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>