<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoundButtons">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFinalRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/final_jeopardy"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonFirstRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/back_to_first_round"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonSecondRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/double_jeopardy" />
    </LinearLayout>

</FrameLayout>