<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="397dp"
        android:layout_height="326dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgJeopardy"
            android:layout_width="wrap_content"
            android:layout_height="114dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="119dp"

            android:layout_marginEnd="129dp"

            app:srcCompat="@drawable/jeopardy"
            tools:ignore="NotSibling" />

        <EditText
            android:id="@+id/edUserName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""

            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
             />


        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
             />

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonWith3DText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bordeau"

            android:text="@string/login"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="24sp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>